  R arrays of unspecified type. New type-specific classes (for example for
  vectors :class:`rpy2.robjects.vectors.IntVector`,
  :class:`rpy2.robjects.vectors.BoolVector`,
  :class:`rpy2.robjects.vectors.FloatVector`,
  :class:`rpy2.robjects.vectors.ComplexVector`, or
  :class:`rpy2.robjects.vectors.StrVector`) should be used instead.


Release 2.9.4
=============

Bugs fixed
----------

- Fallback for failure to import numpy or pandas is now dissociated from
  failure to import :mod:`numpy2ri` or :mod:`pandas2ri` (issue #463).

- :func:`repr` for R POSIX date/time vectors is now showing a string
  representation of the date/time rather than the timestamp as a float
  (issue #467).

- The HTML representation of R data frame (the default representation in the
  Jupyter notebook) was displaying an inconsistent number of rows
  (found while workin on issue #466).

- Handle time zones in timezones in Pandas when converting to R data frames
  (issue #454).

- When exiting the Python process, the R cleanup is now explicitly request
  to happen before Python's exit. This is preventing possible segfaults
  the process is terminating (issue #471).

- dplyr method `ungroup()` was missing from
  :class:`rpy2.robjects.lib.dplyr.DataFrame` (issue #473).


Release 2.9.3
=============

Bugs fixed
----------

- Delegate finding where is local time zone file to either a user-specified
  module-level variable `default_timezone` or to the third-party
  module :mod:`tzlocal` (issue #448).


Release 2.9.2
=============

Changes
-------

- The pandas converter is converting :class:`pandas.Series` of `dtype` `"O"`
  to :class:`rpy2.robjects.vectors.StrVector` objects, issueing a warning
  about it (See issue #421).

- The conversion of pandas data frame is now working with columns rather
  than rows (introduce in bug fix for issue #442 below) and this is expected
  to result in more efficient conversions.

Bugs fixed
----------
