@@ -10,8 +10,6 @@ include _rinterface_cffi_build
 
 include rpy/__init__.py
 include rpy/tests.py
-include rpy/rpy_classic.py
-include rpy/tests_rpy_classic.py
 include rpy/situation.py
 
 recursive-include rpy/robjects *.py
